// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Recommend Azure VM sizes, VM Scale Sets (VMSS), and configurations based on workload requirements, performance needs, and budget constraints. No Azure account required — uses public documentation and the Azure Retail Prices API. WHEN: recommend VM size, which VM should I use, choose Azure VM, VM for web/database/ML/batch/HPC, GPU VM, compare VM sizes, cheapest VM, best VM for workload, VM pricing, cost estimate, burstable/compute/memory/storage optimized VM, confidential computing, VM trade-offs, VM families, VMSS, scale set recommendation, autoscale VMs, load balanced VMs, VMSS vs VM, scale out, horizontal scaling, flexible orchestration.",
  "extractedKeywords": [
    "account",
    "autoscale",
    "azure",
    "balanced",
    "based",
    "batch",
    "best",
    "budget",
    "burstable",
    "cheapest",
    "choose",
    "compare",
    "compute",
    "computing",
    "confidential",
    "configurations",
    "constraints",
    "cost",
    "database",
    "documentation",
    "estimate",
    "families",
    "flexible",
    "horizontal",
    "load",
    "memory",
    "monitor",
    "needs",
    "networking",
    "optimized",
    "orchestration",
    "performance",
    "prices",
    "pricing",
    "public",
    "recommend",
    "recommendation",
    "required",
    "requirements",
    "retail",
    "scale",
    "scaling",
    "sets",
    "should",
    "size",
    "sizes",
    "storage",
    "trade-offs",
    "uses",
    "vmss",
    "when",
    "which",
    "workload",
  ],
  "name": "azure-compute",
}
`;

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "account",
  "autoscale",
  "azure",
  "balanced",
  "based",
  "batch",
  "best",
  "budget",
  "burstable",
  "cheapest",
  "choose",
  "compare",
  "compute",
  "computing",
  "confidential",
  "configurations",
  "constraints",
  "cost",
  "database",
  "documentation",
  "estimate",
  "families",
  "flexible",
  "horizontal",
  "load",
  "memory",
  "monitor",
  "needs",
  "networking",
  "optimized",
  "orchestration",
  "performance",
  "prices",
  "pricing",
  "public",
  "recommend",
  "recommendation",
  "required",
  "requirements",
  "retail",
  "scale",
  "scaling",
  "sets",
  "should",
  "size",
  "sizes",
  "storage",
  "trade-offs",
  "uses",
  "vmss",
  "when",
  "which",
  "workload",
]
`;
